--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "LCRN06-book-store-app-expo",
-    "slug": "LCRN06-book-store-app-expo",
+    "name": "book-store-app",
+    "slug": "book-store-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
